--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-
+<!doctype html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Flappy Square II</title>
+    </head>
+    <body>
+        <canvas id="container"></canvas>
+        <script src="./js/index.js"></script>
+    </body>
+</html>
