--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Flappy Square II</title>
+        <link rel="stylesheet" type="text/css" href="./css/main.css"/>
     </head>
     <body>
         <canvas id="container"></canvas>
